			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05h: *********************************

IMP/MAN: (2/23/07, GVG) FillGenerator for CMOS90 enabled. Only working
the tiles generator wihtout caps. The rest of the code not ported yet.

BUG: (2/23/07, GVG) Fill generator crashing in CapLayer (bug#1278)
FIX: Correct detection of templates job in FillCellGenJob

IMP: (2/21/07, GVG) LayerCoverageTool test repaired after changes in code to get 
electrical layers during NetworkCoverage calculation. ExtractionTest removed as
it is a duplicate of LayerCoverageTool.

IMP/MAN: (2/21/07, SMR) Added command "Tool / Logical Effort / Estimate Delays"
     to do a simple Logical Effort calculation.

BUG: (2/21/07, SMR) Java 1.6 prints error when initializing the explorer tree (Bug #1276).
FIX: In ExplorerTree.setUI(), ignore the ClassNotFoundException.

************************* Version 8.05g: *********************************

IMP/MAN: CMOS90 Dummy CrossM5M8Node disabled in CMOS90 tech.

IMP/MAN: (2/17/07, GVG) New RDL-related arc,pin,contact in CMOS90/TSMC.
including some DRC rules. Not available for ST.

BUG: (2/17/07, GVG) GateGenerationTest not working from Test menu due bad renaming
of classes after refactorization.
FIX: Class name fixed.

IMP: (2/17/07, GVG) Removing scale factor to compose MoCMOS tech name.

BUG: (2/16/07, GVG) Test -> GenerationGateTest -> * were not working since last refactorization
FIX: Calling the correct constructor, GenerationGateTest instead of GenerationTest

BUG: (2/15/07, SMR, from Bob Reese) Prefuse does not compile under Java 1.6
FIX: In ExpandedFilter.getAllDepths(), added "false" as second parameter to
     m_bfs_whole.next() call.

BUG: (2/15/07, SMR) Pad frame generator doesn't handle schematic cores with bus ports.
FIX: In PadGenerator.createPadFrame() handle export wiring better.
